@@ -1,0 +1,3 @@
+noinst_LTLIBRARIES = libmicro.la
+libmicro_la_SOURCES = example1.h example1.c
+libmicro_la_CFLAGS = -fPIC
