@@ -4,12 +4,17 @@
 AC_PREREQ([2.69])
 AC_INIT([CEmbeddedHttpd], [0.0.1], [arjenderijke@gmail.com])
 AM_INIT_AUTOMAKE
+LT_PREREQ([2.4.2])
+LT_INIT
 AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([m4])
 
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
+#AC_PROG_RANLIB
+AM_PROG_CC_C_O
 
 # Checks for libraries.
 have_microhttpd=no
@@ -37,6 +42,9 @@ AC_TYPE_SIZE_T
 # Checks for library functions.
 
 AC_CONFIG_FILES([Makefile
+		 common/Makefile
+		 libexamples/include/Makefile
+		 libexamples/Makefile
                  src/Makefile])
 AC_OUTPUT
 
