@@ -1,0 +1,5 @@
+#ifndef LIBEXAMPLES_H_INCLUDED
+#define LIBEXAMPLES_H_INCLUDED
+void run_example(const int example);
+#endif /* LIBEXAMPLES_H_INCLUDED */
+
