@@ -1,5 +1,7 @@
 bin_PROGRAMS = cembeddedhttpd
 cembeddedhttpd_SOURCES = main.c
+cembeddedhttpd_CPPFLAGS = -I$(top_srcdir)/libexamples/include
+cembeddedhttpd_LDADD = ../libexamples/libexamples.la
 
 check_SCRIPTS = greptest.sh
 TESTS = $(check_SCRIPTS)
@@ -9,4 +11,3 @@ greptest.sh:
 	chmod +x greptest.sh
 
 CLEANFILES = greptest.sh
- 
