@@ -1,3 +1,7 @@
+2014-11-18  Arjen de Rijke  <arjenderijke@gmail.com>
+
+	* configure.ac: Add libtool support
+
 2014-11-16  Arjen de Rijke  <arjenderijke@gmail.com>
 
 	* configure.ac: Add support for automake
